syntax = "proto3";

package rest;

option go_package = ".;rest";

// 互动类型枚举
enum InteractionType {
  INTERACTION_TYPE_UNSPECIFIED = 0;
  INTERACTION_TYPE_LIKE = 1;        // 点赞
  INTERACTION_TYPE_FAVORITE = 2;    // 收藏
  INTERACTION_TYPE_SHARE = 3;       // 分享
  INTERACTION_TYPE_REPOST = 4;      // 转发
}

// 对象类型枚举
enum ObjectType {
  OBJECT_TYPE_UNSPECIFIED = 0;
  OBJECT_TYPE_POST = 1;             // 帖子
  OBJECT_TYPE_COMMENT = 2;          // 评论
  OBJECT_TYPE_USER = 3;             // 用户（关注等）
}

// 互动记录
message Interaction {
  int64 id = 1;
  int64 user_id = 2;                // 用户ID
  int64 object_id = 3;              // 对象ID
  ObjectType object_type = 4;       // 对象类型
  InteractionType interaction_type = 5; // 互动类型
  string metadata = 6;              // 元数据(JSON格式，如转发评论)
  string created_at = 7;
}

// 互动统计
message InteractionStats {
  int64 object_id = 1;
  ObjectType object_type = 2;
  int64 like_count = 3;             // 点赞数
  int64 favorite_count = 4;         // 收藏数
  int64 share_count = 5;            // 分享数
  int64 repost_count = 6;           // 转发数
}

// 执行互动请求
message DoInteractionRequest {
  int64 user_id = 1;
  int64 object_id = 2;
  ObjectType object_type = 3;
  InteractionType interaction_type = 4;
  string metadata = 5;              // 可选的元数据
}

// 执行互动响应
message DoInteractionResponse {
  bool success = 1;
  string message = 2;
  Interaction interaction = 3;
}

// 取消互动请求
message UndoInteractionRequest {
  int64 user_id = 1;
  int64 object_id = 2;
  ObjectType object_type = 3;
  InteractionType interaction_type = 4;
}

// 取消互动响应
message UndoInteractionResponse {
  bool success = 1;
  string message = 2;
}

// 检查互动状态请求
message CheckInteractionRequest {
  int64 user_id = 1;
  int64 object_id = 2;
  ObjectType object_type = 3;
  InteractionType interaction_type = 4;
}

// 检查互动状态响应
message CheckInteractionResponse {
  bool success = 1;
  string message = 2;
  bool has_interaction = 3;
  Interaction interaction = 4;      // 如果存在互动，返回详情
}

// 获取对象统计请求
message GetObjectStatsRequest {
  int64 object_id = 1;
  ObjectType object_type = 2;
}

// 获取对象统计响应
message GetObjectStatsResponse {
  bool success = 1;
  string message = 2;
  InteractionStats stats = 3;
}

// 批量获取对象统计请求
message GetBatchObjectStatsRequest {
  repeated int64 object_ids = 1;
  ObjectType object_type = 2;
}

// 批量获取对象统计响应
message GetBatchObjectStatsResponse {
  bool success = 1;
  string message = 2;
  repeated InteractionStats stats = 3;
}

// 获取用户互动列表请求
message GetUserInteractionsRequest {
  int64 user_id = 1;
  InteractionType interaction_type = 2; // 可选，过滤特定类型
  ObjectType object_type = 3;           // 可选，过滤特定对象类型
  int32 page = 4;
  int32 page_size = 5;
}

// 获取用户互动列表响应
message GetUserInteractionsResponse {
  bool success = 1;
  string message = 2;
  repeated Interaction interactions = 3;
  int64 total = 4;
  int32 page = 5;
  int32 page_size = 6;
}

// 获取对象互动列表请求
message GetObjectInteractionsRequest {
  int64 object_id = 1;
  ObjectType object_type = 2;
  InteractionType interaction_type = 3; // 可选，过滤特定类型
  int32 page = 4;
  int32 page_size = 5;
}

// 获取对象互动列表响应
message GetObjectInteractionsResponse {
  bool success = 1;
  string message = 2;
  repeated Interaction interactions = 3;
  int64 total = 4;
  int32 page = 5;
  int32 page_size = 6;
}

// 批量检查互动状态请求
message BatchCheckInteractionRequest {
  int64 user_id = 1;
  repeated int64 object_ids = 2;
  ObjectType object_type = 3;
  InteractionType interaction_type = 4;
}

// 批量检查互动状态响应
message BatchCheckInteractionResponse {
  bool success = 1;
  string message = 2;
  map<int64, bool> interactions = 3;    // object_id -> has_interaction
}

// 互动服务的gRPC接口
service InteractionService {
  // 基础互动操作
  rpc DoInteraction(DoInteractionRequest) returns (DoInteractionResponse);
  rpc UndoInteraction(UndoInteractionRequest) returns (UndoInteractionResponse);
  rpc CheckInteraction(CheckInteractionRequest) returns (CheckInteractionResponse);
  rpc BatchCheckInteraction(BatchCheckInteractionRequest) returns (BatchCheckInteractionResponse);
  
  // 统计查询
  rpc GetObjectStats(GetObjectStatsRequest) returns (GetObjectStatsResponse);
  rpc GetBatchObjectStats(GetBatchObjectStatsRequest) returns (GetBatchObjectStatsResponse);
  
  // 列表查询
  rpc GetUserInteractions(GetUserInteractionsRequest) returns (GetUserInteractionsResponse);
  rpc GetObjectInteractions(GetObjectInteractionsRequest) returns (GetObjectInteractionsResponse);
}
